tests/error04.out
tests/error04.stl:2:23-2:24: error:
    Kind mismatch while checking type:
        a
    Expected kind:
        Type
    Actual kind:
        ?κ₁ -> κ₂