tests/error04.stl

type Foo (a : Type) = a a
